tests/e2e/semantics/float_assign_bool.story
a = 1.5 + true
